--- a/roles/instance/tasks/main.yaml
+++ b/roles/instance/tasks/main.yaml
@@ -1,6 +1,40 @@
 ---
 # Playbook to instanciate an OpenStack instance
 
+- name: ensure security group for public facing nodes exists
+  os_security_group:
+    cloud:                  "{{ os_cloud_name }}"
+    state:                  present
+    name:                   "{{ playbook_name }}-public-secgroup"
+    description:            "security group for public {{ playbook_name }} servers"
+
+- name: ensure HTTP is allowed from anywhere for public nodes
+  os_security_group_rule:
+    cloud:                  "{{ os_cloud_name }}"
+    security_group:         "{{ playbook_name }}-public-secgroup"
+    protocol:               tcp
+    port_range_min:         80
+    port_range_max:         80
+    remote_ip_prefix:       0.0.0.0/0
+
+- name: ensure HTTPS is allowed from anywhere for public nodes
+  os_security_group_rule:
+    cloud:                  "{{ os_cloud_name }}"
+    security_group:         "{{ playbook_name }}-public-secgroup"
+    protocol:               tcp
+    port_range_min:         443
+    port_range_max:         443
+    remote_ip_prefix:       0.0.0.0/0
+
+- name: ensure SSH is allowed from anywhere for public nodes
+  os_security_group_rule:
+    cloud:                  "{{ os_cloud_name }}"
+    security_group:         "{{ playbook_name }}-public-secgroup"
+    protocol:               tcp
+    port_range_min:         22
+    port_range_max:         22
+    remote_ip_prefix:       0.0.0.0/0
+
 - name: ensure public-facing nodes are up
   os_server:
     cloud:                  "{{ os_cloud_name }}"
@@ -9,6 +43,7 @@
     image:                  "{{ os_cloud_image_name }}"
     key_name:               "{{ os_key_name }}"
     flavor:                 "{{ os_cloud_flavor_name }}"
+    security_group:         "{{ playbook_name }}-public-secgroup"
     nics:
       - net-name:           "{{ os_cloud_publicnetwork_name }}"
       - net-name:           "{{ os_cloud_privatenetwork_name }}"
