--- a/roles/cleanup/tasks/main.yaml
+++ b/roles/cleanup/tasks/main.yaml
@@ -34,6 +34,12 @@
       name:       "{{ os_key_name }}"
   when:           '"delete_all" in action'
 
+- name: delete security group for public facing nodes
+  os_security_group:
+    cloud:                  "{{ os_cloud_name }}"
+    state:                  absent
+    name:                   "{{ playbook_name }}-public-secgroup"
+
 - name: checking if SSH key exists
   stat:
     path:         "{{ ansible_ssh_private_key_file }}"
