--- a/group_vars/all/vars_file.yaml
+++ b/group_vars/all/vars_file.yaml
@@ -1,18 +1,10 @@
 action:                         "maintain"
 
-#node counting and balancing
-node_number:                    "{{ node_count          | default( ( parameters is defined and parameters.node_count is defined )           | ternary( parameters.node_count,           1 ) ) }}"
-public_node_number:             "{{ public_node_count   | default( ( parameters is defined and parameters.public_node_count is defined )    | ternary( parameters.public_node_count,    1 ) ) }}"
-private_node_number:            "{{ ( parameters is defined and parameters.private_node_number is defined )                                 | ternary( parameters.private_node_number, ( node_number | int ) - ( public_node_number | int ) ) }}"
-
-
 #OpenStack ssg key name defaulting
-os_cloud_name:                  "{{ os_cloud }}"
-os_instancename_prefix:         "{{ instancename_prefix | default( ( parameters is defined and parameters.instancename_prefix is defined )  | ternary( parameters.instancename_prefix,  playbook_name + '-playbook' ) ) }}"
+os_cloud_name:                  "{{ os_cloud            | default( ( openstack_config is defined and openstack_config.os_cloud is defined ) | ternary( openstack_config.os_cloud,      '' ) ) }}"
+os_instancename_prefix:         "{{ instancename_prefix | default( playbook_name + '-playbook' ) }}"
 os_key_name:                    "{{ key_filename        | default( playbook_name + '-key' ) }}"
-os_instance_tags:               "{{ server_tags         | default( ( parameters is defined and parameters.server_tags is defined )          | ternary( parameters.server_tags,  playbook_name ) ) }}"
-os_cloud_privatenetwork_name:   "{{ network_lan         | default( ( parameters is defined and parameters.network_lan is defined )          | ternary( parameters.network_lan,          '' ) ) }}"
-os_cloud_publicnetwork_name:    "{{ network_wan         | default( ( parameters is defined and parameters.network_wan is defined )          | ternary( parameters.network_wan,          '' ) ) }}"
+os_instance_tags:               "{{ server_tags         | default( playbook_name ) }}"
 
 #keypair defaulting
 computed_ssh_key_path:          "{{ ( '~' | expanduser ) + '/.ssh/' }}"
