--- a/roles/inventory-cleanup/tasks/main.yaml
+++ b/roles/inventory-cleanup/tasks/main.yaml
@@ -27,19 +27,19 @@
       path:                 "./config/data/{{ playbook_name }}-ssh_config"
       state:                absent
 
+- name: delete all port created in OpenStack for keepalived
+  when: not 'local' in action and 'delete' in action
+  os_port:
+    cloud:                  "{{ os_cloud_name }}"
+    state:                  absent
+    name:                   "{{ playbook_name }}-keepalived-port"
+
 - name: delete existing SSH keys in OpenStack
   when: '"delete_all" in action'
   os_keypair:
       cloud:                "{{ os_cloud_name }}"
       state:                absent
       name:                 "{{ os_key_name }}"
-
-- name: delete all port created in OpenStack
-  when: '"delete_all" in action'
-  os_port:
-    cloud:                  "{{ os_cloud_name }}"
-    state:                  absent
-    name:                   "{{ playbook_name }}-keepalived-port"
 
 - name: delete security group for public facing nodes in OpenStack
   os_security_group:
