--- a/roles/inventory/tasks/main.yaml
+++ b/roles/inventory/tasks/main.yaml
@@ -2,24 +2,80 @@
 # Playbook to manage OpenStack inventory
 
 - name: gathering OpenStack instance facts
-  connection:         local
+  connection:                     local
   os_server_facts:
-    cloud:            "{{ os_cloud_name }}"
-    server:           "{{ os_instancename_prefix }}*"
-  register:           gathered_os_instance_list
+    cloud:                        "{{ os_cloud_name }}"
+    server:                       "{{ os_instancename_prefix }}*"
+  register:                       gathered_os_instance_list
 
 - name: refresh inventory after OpenStack inventory gathering
   meta: refresh_inventory
 
+- name: gather public network (WAN) information
+  connection:                     local
+  os_networks_facts:
+    cloud:                        "{{ os_cloud_name }}"
+    name:                         "{{ os_cloud_publicnetwork_name }}"
+
+- name: store public network (WAN) ID
+  set_fact:
+    os_cloud_publicnetwork_id:   "{{ openstack_networks[ 0 ].id }}"
+
+- name: store public subnet (WAN) ID
+  set_fact:
+    os_cloud_publicsubnet_id:     "{{ openstack_networks[ 0 ].subnets[ 0 ] }}"
+
+- name: gather facts about the public network (WAN) subnets
+  connection:                     local
+  os_subnets_facts:
+    cloud:                        "{{ os_cloud_name }}"
+    filters:
+      id:                         "{{ os_cloud_publicsubnet_id }}"
+
+- name: store public subnet (WAN) cidr as fact
+  set_fact:
+    os_cloud_publicsubnet_cidr:   "{{ openstack_subnets[ 0 ].cidr }}"
+
+- name: gather private network (LAN) information
+  connection:                     local
+  os_networks_facts:
+    cloud:                        "{{ os_cloud_name }}"
+    name:                         "{{ os_cloud_privatenetwork_name }}"
+
+- name: store private network (LAN) ID
+  set_fact:
+    os_cloud_privatenetwork_id:   "{{ openstack_networks[ 0 ].id }}"
+
+- name: store private subnet (LAN) ID
+  set_fact:
+    os_cloud_privatesubnet_id:    "{{ openstack_networks[ 0 ].subnets[ 0 ] }}"
+
+- name: gather facts about the private network (LAN) subnets
+  connection:                     local
+  os_subnets_facts:
+    cloud:                        "{{ os_cloud_name }}"
+    filters:
+      id:                         "{{ os_cloud_privatesubnet_id }}"
+
+- name: store private subnet (LAN) cidr as fact
+  set_fact:
+    os_cloud_privatesubnet_cidr:  "{{ openstack_subnets[ 0 ].cidr }}"
+
 - name: adding existing OpenStack instance to its groups
   add_host:
-    name:             "{{ item.id }}"
-    groups:           "{{ item.metadata.groups }}"
-    instance_name:    "{{ item.name }}"
-    os_uuid:          "{{ item.id }}"
-    os_key_name:      "{{ item.metadata.key_name }}"
-    os_instance_tags: "{{ item.metadata.tags }}"
-    publicIPv4:       "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
-    privateIPv4:      "{{ ( item.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
-    os_instancename_prefix: ''
-  with_items:         "{{ gathered_os_instance_list.ansible_facts.openstack_servers }}"
+    name:                         "{{ item.id }}"
+    groups:                       "{{ item.metadata.groups }}"
+    instance_name:                "{{ item.name }}"
+    os_uuid:                      "{{ item.id }}"
+    os_key_name:                  "{{ item.metadata.key_name }}"
+    os_instance_tags:             "{{ item.metadata.tags }}"
+    publicIPv4:                   "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    privateIPv4:                  "{{ ( item.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    os_cloud_publicnetwork_id:    "{{ os_cloud_publicnetwork_id }}"
+    os_cloud_publicsubnet_id:     "{{ os_cloud_publicsubnet_id }}"
+    os_cloud_publicsubnet_cidr:   "{{ os_cloud_publicsubnet_cidr }}"
+    os_cloud_privatenetwork_id:   "{{ os_cloud_privatenetwork_id }}"
+    os_cloud_privatesubnet_id:    "{{ os_cloud_privatesubnet_id }}"
+    os_cloud_privatesubnet_cidr:  "{{ os_cloud_privatesubnet_cidr }}"
+    os_instancename_prefix:       ''
+  with_items:                     "{{ gathered_os_instance_list.ansible_facts.openstack_servers }}"
