UPD: moved from proxy to router for bridge node

--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -2,19 +2,18 @@
 # Playbook to ensure docker is installed
 
 - name: add key server
-  when:               inventory_hostname in groups[ 'public_nodes' ]
   apt_key:
     keyserver:        hkp://keyserver.ubuntu.com:80
     id:               58118E89F3A912897C070ADBF76221572C52609D
 
-- name: add key server on private host
-  when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
-  apt_key:
-    keyserver:        hkp://keyserver.ubuntu.com:80
-    id:               58118E89F3A912897C070ADBF76221572C52609D
-  environment:
-    http_proxy:       "http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
-    https_proxy:      "https://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+# - name: add key server on private host
+#   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
+#   apt_key:
+#     keyserver:        hkp://keyserver.ubuntu.com:80
+#     id:               58118E89F3A912897C070ADBF76221572C52609D
+#    environment:
+#      http_proxy:       "http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+#      https_proxy:      "https://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
 
 - name: add docker repository
   apt_repository:
@@ -94,7 +93,7 @@
 
 - name: upgrade pip on private hosts
   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
-  shell:              pip install --upgrade pip --proxy "{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+  shell:              pip install --upgrade pip #--proxy "{{ proxy_host_privateip }}:{{ proxy_http_port }}"
   register:           pip_upgrade
   until:              pip_upgrade|success
   retries:            3
@@ -103,29 +102,46 @@
 
 - name: install python docker lib on private hosts
   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
-  shell:              pip install docker-py --proxy "{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+  shell:              pip install docker-py #--proxy "{{ proxy_host_privateip }}:{{ proxy_http_port }}"
   register:           pip_result
   until:              pip_result|success
   retries:            3
   delay:              15
   ignore_errors:      yes
 
-- name: make sure systemd docker directory exists
-  file:
-    path:             /etc/systemd/system/docker.service.d
-    state:            directory
+# - name: make sure systemd docker directory exists
+#   file:
+#     path:             /etc/systemd/system/docker.service.d
+#     state:            directory
+#
+# - name: enforce private nodes to use proxy for docker registry operations
+#   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
+#   become:             yes
+#   blockinfile:
+#     create:           yes
+#     state:            present
+#     dest:             /etc/systemd/system/docker.service.d/http-proxy.conf
+#     insertafter:      EOF
+#     block:  |
+#                       [Service]
+#                       Environment="HTTP_PROXY=http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+#                       Environment="HTTPS_PROXY=https://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
 
-- name: enforce private nodes to use proxy for docker registry operations
-  when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
-  become:             yes
-  blockinfile:
-    create:           yes
-    state:            present
-    dest:             /etc/systemd/system/docker.service.d/http-proxy.conf
-    insertafter:      EOF
-    block:  |
-                      [Service]
-                      Environment="HTTP_PROXY=http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+# - name: enforce private nodes to use proxy for all other docker operations
+#   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
+#   become:             yes
+#   blockinfile:
+#     create:           yes
+#     state:            present
+#     dest:             /etc/default/docker
+#     insertafter:      EOF
+#     block:  |
+#                       DOCKER_OPTS="--dns {{ proxy_host_privateip }}"
+#                       export http_proxy="http://{{ proxy_host_privateip }}:{{ proxy_http_port }}/"
+#                       export https_proxy="https://{{ proxy_host_privateip }}:{{ proxy_http_port }}/"
+#                       export HTTP_PROXY="http://{{ proxy_host_privateip }}:{{ proxy_http_port }}/"
+#                       export HTTPS_PROXY="https://{{ proxy_host_privateip }}:{{ proxy_http_port }}/"
+
 
 - name: reload dockerd configuration
   when:               groups[ 'private_nodes' ] is defined and inventory_hostname in groups[ 'private_nodes' ]
