--- a/roles/inventory/tasks/main.yaml
+++ b/roles/inventory/tasks/main.yaml
@@ -17,6 +17,10 @@
     cloud:                        "{{ os_cloud_name }}"
     name:                         "{{ os_cloud_publicnetwork_name }}"
 
+- name: store public network (WAN) name
+  set_fact:
+    os_cloud_publicnetwork_name:  "{{ openstack_networks[ 0 ].name }}"
+
 - name: store public network (WAN) ID
   set_fact:
     os_cloud_publicnetwork_id:   "{{ openstack_networks[ 0 ].id }}"
@@ -36,11 +40,19 @@
   set_fact:
     os_cloud_publicsubnet_cidr:   "{{ openstack_subnets[ 0 ].cidr }}"
 
+- name: store private subnet (WAN) gateway IP as fact
+  set_fact:
+    os_cloud_publicsubnet_gateway: "{{ openstack_subnets[ 0 ].gateway_ip }}"
+
 - name: gather private network (LAN) information
   connection:                     local
   os_networks_facts:
     cloud:                        "{{ os_cloud_name }}"
     name:                         "{{ os_cloud_privatenetwork_name }}"
+
+- name: store private network (LAN) name
+  set_fact:
+    os_cloud_privatenetwork_name:  "{{ openstack_networks[ 0 ].name }}"
 
 - name: store private network (LAN) ID
   set_fact:
@@ -61,6 +73,10 @@
   set_fact:
     os_cloud_privatesubnet_cidr:  "{{ openstack_subnets[ 0 ].cidr }}"
 
+- name: store private subnet (LAN) gateway IP as fact
+  set_fact:
+    os_cloud_privatesubnet_gateway: "{{ openstack_subnets[ 0 ].gateway_ip }}"
+
 - name: adding existing OpenStack instance to its groups
   add_host:
     name:                         "{{ item.id }}"
@@ -69,11 +85,17 @@
     os_uuid:                      "{{ item.id }}"
     os_key_name:                  "{{ item.metadata.key_name }}"
     os_instance_tags:             "{{ item.metadata.tags }}"
+    ansible_ssh_host:             "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( item.networks[ os_cloud_privatenetwork_name ][ 0 ] ) }}"
+    openstack.accessIPv4:         "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    public_v4:                    "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    private_v4:                   "{{ ( item.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     publicIPv4:                   "{{ ( item.networks[ os_cloud_publicnetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
     privateIPv4:                  "{{ ( item.networks[ os_cloud_privatenetwork_name ] | default( [] ) )[ 0 ] | default( '' ) }}"
+    os_cloud_publicnetwork_name:  "{{ os_cloud_publicnetwork_name }}"
     os_cloud_publicnetwork_id:    "{{ os_cloud_publicnetwork_id }}"
     os_cloud_publicsubnet_id:     "{{ os_cloud_publicsubnet_id }}"
     os_cloud_publicsubnet_cidr:   "{{ os_cloud_publicsubnet_cidr }}"
+    os_cloud_privatenetwork_name: "{{ os_cloud_privatenetwork_name }}"
     os_cloud_privatenetwork_id:   "{{ os_cloud_privatenetwork_id }}"
     os_cloud_privatesubnet_id:    "{{ os_cloud_privatesubnet_id }}"
     os_cloud_privatesubnet_cidr:  "{{ os_cloud_privatesubnet_cidr }}"
