--- a/roles/meta-proxy/tasks/main.yaml
+++ b/roles/meta-proxy/tasks/main.yaml
@@ -75,6 +75,22 @@
                             Acquire::http::Proxy "http://{{ proxy_host_privateip }}:{{ proxy_http_port }}";
                             Acquire::https::Proxy "https://{{ proxy_host_privateip }}:{{ proxy_http_port }}";
 
+- name: enforce private node to use proxy for http/https operations
+  when:                     inventory_hostname in groups[ 'private_nodes' ]
+  become:                   yes
+  blockinfile:
+    create:                 yes
+    state:                  present
+    dest:                   /etc/environment
+    insertafter:            EOF
+    block:  |
+                            http_proxy="http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+                            https_proxy="https://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+                            no_proxy="localhost,127.0.0.1"
+                            HTTP_PROXY="http://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+                            HTTPS_PROXY="https://{{ proxy_host_privateip }}:{{ proxy_http_port }}"
+                            NO_PROXY="localhost,127.0.0.1"
+
 - name: install Bind9
   when:                     inventory_hostname == proxy_host
   become:                   yes
@@ -120,9 +136,12 @@
 - name: enforce private node to use proxy for DNS operations
   when:                     inventory_hostname in groups[ 'private_nodes' ]
   become:                   yes
-  lineinfile:
+  blockinfile:
     create:                 yes
     state:                  present
     dest:                   /etc/resolv.conf
-    insertbefore:           BOF
-    line:                   "nameserver {{ proxy_host_privateip }}"
+    insertafter:            EOF
+    block:  |
+                            nameserver {{ proxy_host_privateip }}
+                            nameserver 8.8.8.8
+                            nameserver 8.8.4.4
