--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -15,3 +15,5 @@ ansible_ssh_private_key_file:   "{{ computed_ssh_key_path + os_key_name }}"
 
 #squid defaults (have to be global to be shared accross all meta-roles)
 proxy_http_port:                3128
+global_dns_server_1:            69.9.191.4
+global_dns_server_2:            69.9.160.191
